--- a/FrontEnd/index.css
+++ b/FrontEnd/index.css
@@ -6,42 +6,42 @@
     box-shadow: 0 12px 20px -12px rgb(0 0 0/35%);
   }
 }
-.text-icon {
+.text-icon6 {
   top: calc(50% - 5px);
   left: 2.13rem;
   width: 1.75rem;
   height: 0.69rem;
 }
-.battery-icon,
-.notch-icon,
-.text-icon {
+.battery-icon6,
+.notch-icon6,
+.text-icon6 {
   position: absolute;
   object-fit: cover;
 }
-.notch-icon {
+.notch-icon6 {
   top: -0.12rem;
   left: 4.88rem;
   width: 0;
   height: 0;
 }
-.battery-icon {
+.battery-icon6 {
   top: 0;
   right: 0.01rem;
   width: 1.52rem;
   height: 0.71rem;
 }
-.mobile-signal-icon,
-.wifi-icon {
+.mobile-signal-icon6,
+.wifi-icon6 {
   position: relative;
   width: 0.96rem;
   height: 0.69rem;
   object-fit: cover;
 }
-.mobile-signal-icon {
+.mobile-signal-icon6 {
   width: 1.06rem;
   height: 0.67rem;
 }
-.recording-indicator-icon {
+.recording-indicator-icon6 {
   position: absolute;
   top: -0.58rem;
   right: 3.53rem;
@@ -50,21 +50,21 @@
   object-fit: cover;
   display: none;
 }
-.right-side {
+.right-side6 {
   position: absolute;
   top: 1.08rem;
   right: 0.91rem;
   width: 4.17rem;
   height: 0.71rem;
 }
-.iphone-x-or-newer {
+.iphone-x-or-newer6 {
   align-self: stretch;
   position: relative;
   height: 2.75rem;
   overflow: hidden;
   flex-shrink: 0;
 }
-.asthmapp-logo-dark-1 {
+.asthmapp-logo-dark-12 {
   position: relative;
   width: 13.06rem;
   height: 7.02rem;
@@ -80,7 +80,7 @@
   font-weight: 800;
   font-family: inherit;
 }
-.headercontents {
+.headercontents2 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -91,12 +91,12 @@
   color: #1e385f;
   font-family: "Plus Jakarta Sans";
 }
-.header,
-.headercontents,
-.name {
+.header27,
+.headercontents2,
+.name6 {
   align-self: stretch;
 }
-.header {
+.header27 {
   border-radius: 32px;
   overflow: hidden;
   display: flex;
@@ -105,7 +105,7 @@
   justify-content: flex-end;
   gap: 1.5rem;
 }
-.name {
+.name6 {
   margin: 0;
   position: relative;
   font-size: inherit;
@@ -113,13 +113,13 @@
   font-weight: 700;
   font-family: inherit;
 }
-.emailicon {
+.emailicon2 {
   position: relative;
   width: 1.5rem;
   height: 1.5rem;
   object-fit: cover;
 }
-.loremus-ipsumus-d {
+.loremus-ipsumus-d6 {
   border: 0;
   outline: 0;
   font-family: "Plus Jakarta Sans";
@@ -130,7 +130,7 @@
   color: #1e385f;
   text-align: left;
 }
-.text {
+.text36 {
   flex-shrink: 0;
   display: flex;
   flex-direction: row;
@@ -138,14 +138,14 @@
   justify-content: flex-start;
   gap: 0.5rem;
 }
-.solid-eye-icon {
+.solid-eye-icon3 {
   position: relative;
   width: 1.5rem;
   height: 1.5rem;
   object-fit: cover;
   display: none;
 }
-.content {
+.content18 {
   align-self: stretch;
   border-radius: 12px;
   background-color: #fff;
@@ -157,28 +157,28 @@
   justify-content: space-between;
   padding: 1rem;
 }
-.content:hover {
+.content18:hover {
   border: 1px solid #b9b8b8;
   box-sizing: border-box;
 }
-.content1:hover,
-.content:active {
+.content18:active,
+.content19:hover {
   border: 2px solid #b9b8b8;
   box-sizing: border-box;
 }
-.input-fields {
+.input-fields6 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
   gap: 0.5rem;
 }
-.email,
-.input-fields,
-.name1 {
+.email4,
+.input-fields6,
+.name7 {
   align-self: stretch;
 }
-.email {
+.email4 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -188,7 +188,7 @@
   color: #1e385f;
   font-family: "Plus Jakarta Sans";
 }
-.name1 {
+.name7 {
   margin: 0;
   position: relative;
   font-size: inherit;
@@ -196,14 +196,14 @@
   font-weight: 800;
   font-family: inherit;
 }
-.passwordicon {
+.passwordicon3 {
   position: relative;
   width: 1.5rem;
   height: 1.5rem;
   overflow: hidden;
   flex-shrink: 0;
 }
-.loremus-ipsumus-d1 {
+.loremus-ipsumus-d7 {
   border: 0;
   outline: 0;
   font-weight: 600;
@@ -215,7 +215,7 @@
   color: #1e385f;
   text-align: left;
 }
-.vector-icon {
+.vector-icon12 {
   position: absolute;
   height: 60.83%;
   width: 84.17%;
@@ -228,7 +228,7 @@
   max-height: 100%;
   object-fit: cover;
 }
-.solid-eye {
+.solid-eye3 {
   cursor: pointer;
   border: 0;
   padding: 0;
@@ -237,13 +237,13 @@
   width: 1.5rem;
   height: 1.5rem;
 }
-.content1,
-.form,
-.password {
+.content19,
+.form1,
+.password4 {
   align-self: stretch;
   display: flex;
 }
-.content1 {
+.content19 {
   border-radius: 12px;
   background-color: #fff;
   overflow: hidden;
@@ -252,30 +252,30 @@
   justify-content: space-between;
   padding: 1rem;
 }
-.content1:hover {
+.content19:hover {
   background-color: #fff;
   border: 1px solid #b9b8b8;
 }
-.content1:active {
+.content19:active {
   border: 2px solid #b8b9b9;
   box-sizing: border-box;
 }
-.form,
-.password {
+.form1,
+.password4 {
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
 }
-.password {
+.password4 {
   text-align: left;
   font-size: 0.88rem;
   color: #1e385f;
   font-family: "Plus Jakarta Sans";
 }
-.form {
+.form1 {
   gap: 1.5rem;
 }
-.text2 {
+.text38 {
   position: relative;
   font-size: 1rem;
   letter-spacing: -0.01em;
@@ -283,24 +283,24 @@
   color: #fff;
   text-align: left;
 }
-.button-primary1,
-.content2 {
+.button-primary8,
+.content20 {
   flex: 1;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
 }
-.content2 {
+.content20 {
   flex-shrink: 0;
 }
-.button-primary1 {
+.button-primary8 {
   border-radius: 12px;
   background-color: #b2e1e7;
   overflow: hidden;
   padding: 1rem 2rem;
 }
-.button-primary {
+.button-primary7 {
   cursor: pointer;
   border: 0;
   padding: 0;
@@ -311,7 +311,7 @@
   align-items: flex-start;
   justify-content: flex-start;
 }
-.button-primary:hover {
+.button-primary7:hover {
   border-radius: 16px;
   padding: 0;
   box-sizing: border-box;
@@ -319,31 +319,37 @@
   animation: 1s ease 0s 1 normal none shadow-drop-bottom;
   opacity: 1;
 }
-.text3,
-.text4 {
+.text39,
+.text40 {
   position: absolute;
   top: 0;
   left: 0;
 }
-.text4 {
+.text40 {
+  font-size: 0.88rem;
   letter-spacing: -0.01em;
   font-weight: 600;
+  font-family: "Plus Jakarta Sans";
+  color: #b2e1e7;
+  text-align: center;
 }
-.text3 {
+.text39 {
   height: 100%;
   width: 100%;
   right: 0;
   bottom: 0;
   cursor: pointer;
 }
-.hyperlink {
-  text-decoration: none;
+.hyperlink1 {
+  cursor: pointer;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
   position: relative;
   width: 7.63rem;
   height: 1.13rem;
-  color: #b2e1e7;
 }
-.vector-icon1 {
+.vector-icon13 {
   position: relative;
   max-height: 100%;
   width: 9.25rem;
@@ -354,7 +360,7 @@
   letter-spacing: -0.01em;
   font-weight: 600;
 }
-.vector-icon2 {
+.vector-icon14 {
   position: relative;
   max-height: 100%;
   width: 9.19rem;
@@ -366,36 +372,48 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  text-align: left;
-  font-size: 0.75rem;
 }
-.span {
+.text41 {
+  position: relative;
+  font-size: 0.88rem;
+  letter-spacing: -0.01em;
+  text-align: center;
+}
+.sign-up7,
+.span2,
+.text41 {
   font-weight: 600;
+  font-family: "Plus Jakarta Sans";
+  color: #1e385f;
 }
-.sign-up1 {
+.sign-up7 {
   text-decoration: underline;
   font-weight: 800;
   color: #b2e1e7;
 }
-.text7 {
+.text43 {
   position: absolute;
   top: 0;
   left: 0;
+  font-size: 0.88rem;
   letter-spacing: -0.01em;
+  text-align: center;
 }
-.text6 {
+.text42 {
   position: relative;
   width: 3.75rem;
   height: 1.13rem;
   cursor: pointer;
 }
-.sign-up {
-  text-decoration: none;
+.sign-up6 {
+  cursor: pointer;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   justify-content: center;
-  color: inherit;
 }
 .sign-in,
 .signinmain {
@@ -409,8 +427,8 @@
   filter: drop-shadow(0 4px 10px rgba(0, 0, 0, 0.2));
   padding: 0 1.5rem;
   gap: 2rem;
-  text-align: center;
-  font-size: 0.88rem;
+  text-align: left;
+  font-size: 0.75rem;
   color: #1e385f;
   font-family: "Plus Jakarta Sans";
 }
@@ -420,6 +438,7 @@
   width: 100%;
   height: 50.75rem;
   overflow: hidden;
+  padding: 2.25rem 0;
   gap: 1.63rem;
   background-image: url(./public/forgot-password2@3x.png);
   background-size: cover;
