--- a/FrontEnd/AirQuality01.css
+++ b/FrontEnd/AirQuality01.css
@@ -1,13 +1,13 @@
 .airqualitylogo-icon,
 .asthmapp-logo-light-1 {
   position: relative;
-  width: 6.88rem;
-  height: 3.66rem;
+  width: 110px;
+  height: 58.6px;
   object-fit: cover;
 }
 .airqualitylogo-icon {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 24px;
+  height: 24px;
 }
 .headerlogos {
   flex: 1;
@@ -15,12 +15,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0 0 0 1.5rem;
+  padding: 0 0 0 24px;
 }
 .close-icon {
   position: relative;
-  width: 0.93rem;
-  height: 0.93rem;
+  width: 14.9px;
+  height: 14.9px;
   object-fit: cover;
 }
 .close {
@@ -29,8 +29,8 @@
   padding: 0;
   background-color: transparent;
   position: relative;
-  width: 1.13rem;
-  height: 1.13rem;
+  width: 18px;
+  height: 18px;
 }
 .headerairquality {
   align-self: stretch;
@@ -43,7 +43,7 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: space-between;
-  padding: 0.75rem 1.5rem 0.31rem;
+  padding: 12px 24px 5px;
 }
 .your-area {
   position: relative;
@@ -57,13 +57,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  padding: 0.31rem 0.63rem;
+  padding: 5px 10px;
 }
 .your-area1 {
   position: absolute;
   top: 0;
   left: 0;
-  font-size: 0.88rem;
+  font-size: 14px;
   letter-spacing: -0.01em;
   font-family: "Plus Jakarta Sans";
   color: #b9b8b8;
@@ -75,8 +75,8 @@
   padding: 0;
   background-color: transparent;
   position: relative;
-  width: 3.75rem;
-  height: 1.13rem;
+  width: 60px;
+  height: 18px;
 }
 .navairqltyarea {
   margin: 0;
@@ -88,9 +88,9 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 0 0.63rem 0 0;
+  padding: 0 10px 0 0;
   text-align: left;
-  font-size: 0.88rem;
+  font-size: 14px;
   color: #fff;
   font-family: "Plus Jakarta Sans";
 }
@@ -99,7 +99,7 @@
   position: relative;
   font-size: inherit;
   letter-spacing: -0.02em;
-  line-height: 2.38rem;
+  line-height: 38px;
   font-weight: 800;
   font-family: inherit;
 }
@@ -115,7 +115,7 @@
   font-family: inherit;
 }
 .b {
-  font-size: 1.63rem;
+  font-size: 26px;
   color: #4d6b4c;
   text-align: center;
 }
@@ -123,15 +123,15 @@
   align-self: stretch;
   border-radius: 0 36px 0 36px;
   background-color: #b6ddb4;
-  height: 3.13rem;
+  height: 50px;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   justify-content: space-between;
-  padding: 0.38rem 2.25rem;
+  padding: 6px 36px;
   box-sizing: border-box;
   text-align: left;
-  font-size: 1rem;
+  font-size: 16px;
   color: #1e385f;
   font-family: "Plus Jakarta Sans";
 }
@@ -150,9 +150,9 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: space-between;
-  padding: 0 0.63rem;
+  padding: 0 10px;
   text-align: left;
-  font-size: 0.88rem;
+  font-size: 14px;
   color: #1e385f;
   font-family: "Plus Jakarta Sans";
 }
@@ -162,31 +162,13 @@
   left: calc(50% - 18px);
   letter-spacing: -0.01em;
   display: inline-block;
-  width: 2.25rem;
-  height: 1.13rem;
+  width: 36px;
+  height: 18px;
 }
-.path-icon,
-.path-icon1 {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  max-width: 100%;
-  overflow: hidden;
-  max-height: 100%;
-  object-fit: cover;
-}
-.path-icon1 {
-  width: 50%;
-  left: 50%;
-}
-.heading-parent {
+.heading-wrapper {
   position: relative;
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 40px;
+  height: 40px;
 }
 .percentages,
 .pollutionsection {
@@ -201,18 +183,18 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 0.63rem;
+  padding: 10px;
   text-align: center;
-  font-size: 0.88rem;
+  font-size: 14px;
 }
 .pollutionsection {
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: 0 0.63rem;
-  gap: 0.63rem;
+  padding: 0 10px;
+  gap: 10px;
   text-align: left;
-  font-size: 1rem;
+  font-size: 16px;
 }
 .notif {
   align-self: stretch;
@@ -220,7 +202,7 @@
   letter-spacing: -0.01em;
 }
 .insightswidget,
-.text8 {
+.text {
   font-family: "Plus Jakarta Sans";
   text-align: left;
 }
@@ -232,18 +214,17 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: 0.31rem;
-  gap: 0.38rem;
-  font-size: 0.88rem;
+  padding: 5px;
+  font-size: 14px;
   color: #1e385f;
 }
-.text8 {
+.text {
   position: relative;
-  font-size: 1rem;
+  font-size: 16px;
   letter-spacing: -0.01em;
   color: #fff;
 }
-.content3,
+.content,
 .londonbtn1 {
   display: flex;
   flex-direction: row;
@@ -253,11 +234,11 @@
 .londonbtn1 {
   cursor: pointer;
   border: 0;
-  padding: 1rem 2rem;
+  padding: 16px 32px;
   background-color: #b2e1e7;
   flex: 1;
   border-radius: 12px;
-  height: 4.69rem;
+  height: 75px;
   overflow: hidden;
   justify-content: center;
   box-sizing: border-box;
@@ -271,15 +252,15 @@
 .mapsbtn {
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 1.5rem;
+  gap: 24px;
 }
 .changelocationbtn {
   cursor: pointer;
   border: 0;
-  padding: 1rem 2rem;
+  padding: 16px 32px;
   background-color: #b2e1e7;
   border-radius: 12px;
-  height: 2.38rem;
+  height: 38px;
   overflow: hidden;
   flex-shrink: 0;
   align-items: center;
@@ -296,26 +277,39 @@
 .locationprofile {
   border-radius: 36px 36px 0 36px;
   box-shadow: 0 2px 20px 5px rgba(0, 0, 0, 0.1);
-  width: 19.69rem;
+  width: 315px;
   overflow: hidden;
-  padding: 0.75rem 1.25rem;
+  padding: 12px 20px;
   box-sizing: border-box;
-  gap: 0.75rem;
+  gap: 12px;
   text-align: left;
-  font-size: 1.88rem;
+  font-size: 30px;
   color: #1e385f;
   font-family: "Plus Jakarta Sans";
 }
 .mainairqlty {
   align-self: stretch;
   filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.2));
-  padding: 2.81rem 1.88rem;
+  padding: 45px 30px;
+}
+.home-icon {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  max-width: 100%;
+  overflow: hidden;
+  max-height: 100%;
+  object-fit: cover;
 }
 .cloud-icon,
 .home {
   position: relative;
-  width: 2.25rem;
-  height: 2.25rem;
+  width: 36px;
+  height: 36px;
 }
 .home {
   cursor: pointer;
@@ -338,17 +332,17 @@
   border-radius: 32px 32px 0 0;
   background-color: #fff;
   box-shadow: 0 0 34px rgba(0, 0, 0, 0.6);
-  height: 5.13rem;
+  height: 82px;
   flex-shrink: 0;
   flex-direction: row;
-  padding: 0.63rem 1.88rem;
+  padding: 10px 30px;
   box-sizing: border-box;
 }
 .air-quality-01 {
   position: relative;
   border-radius: 32px;
   width: 100%;
-  height: 50.75rem;
+  height: 812px;
   overflow-y: auto;
   flex-direction: column;
   background-image: url(./public/air-quality-01@3x.png);
