--- a/FrontEnd/Home.css
+++ b/FrontEnd/Home.css
@@ -393,7 +393,7 @@
   width: 2.25rem;
   height: 2.25rem;
 }
-.frame2 {
+.frame {
   margin: 0;
   align-self: stretch;
   border-radius: 32px 32px 0 0;
