--- a/FrontEnd/ForgotPassword.css
+++ b/FrontEnd/ForgotPassword.css
@@ -318,6 +318,8 @@
   width: 100%;
   height: 50.75rem;
   overflow: hidden;
+  padding: 2.25rem 0;
+  box-sizing: border-box;
   gap: 8.5rem;
   background-image: url(./public/forgot-password@3x.png);
   background-size: cover;
