--- a/FrontEnd/ForgotPassword2.css
+++ b/FrontEnd/ForgotPassword2.css
@@ -348,6 +348,8 @@
   width: 100%;
   height: 50.75rem;
   overflow: hidden;
+  padding: 2.25rem 0;
+  box-sizing: border-box;
   align-items: center;
   gap: 6.94rem;
   background-image: url(./public/forgot-password2@3x.png);
