--- a/FrontEnd/SignUp.css
+++ b/FrontEnd/SignUp.css
@@ -415,6 +415,8 @@
   width: 100%;
   height: 50.75rem;
   overflow: hidden;
+  padding: 2.25rem 0;
+  box-sizing: border-box;
   gap: 1.63rem;
   background-image: url(./public/forgot-password2@3x.png);
   background-size: cover;
