--- a/FrontEnd/ForgotPassword2.css
+++ b/FrontEnd/ForgotPassword2.css
@@ -135,6 +135,7 @@
 }
 .header1,
 .headercontent {
+  align-self: stretch;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -147,7 +148,6 @@
 }
 .header1 {
   border-radius: 32px;
-  width: 23.44rem;
   height: 11.5rem;
   align-items: center;
   justify-content: center;
