--- a/FrontEnd/Emergency2.css
+++ b/FrontEnd/Emergency2.css
@@ -107,6 +107,13 @@
   justify-content: space-between;
   padding: 0.75rem 1.5rem 0.31rem;
   box-sizing: border-box;
+  z-index: 0;
+}
+.hospital-icon {
+  position: relative;
+  width: 2.25rem;
+  height: 2.25rem;
+  object-fit: cover;
 }
 .emergency-steps {
   margin: 0;
@@ -233,6 +240,7 @@
 }
 .mainemergency2 {
   padding: 0 1.88rem;
+  z-index: 1;
 }
 .home-icon3 {
   position: absolute;
@@ -259,19 +267,28 @@
 .emergency-2,
 .navbaremergency1 {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
 }
 .navbaremergency1 {
   margin: 0;
-  align-self: stretch;
+  position: fixed;
+  bottom: 0;
+  left: 0;  
+  right: 0;
+  justify-content: flex-end;
+  mix-blend-mode: normal;
+  z-index: 2;
   border-radius: 32px 32px 0 0;
   background-color: #fff;
   box-shadow: 0 0 34px rgba(0, 0, 0, 0.6);
   height: 5.13rem;
+  display: flex;
   flex-direction: row;
   align-items: flex-start;
+  justify-content: space-between;
   padding: 0.63rem 1.88rem;
-  box-sizing: border-box;
+  box-sizing: border-box;	
 }
 .emergency-2 {
   position: relative;
@@ -281,6 +298,9 @@
   overflow: hidden;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
+  padding: 0 0 2.25rem;
+  gap: 0.75rem;
   background-image: url(./public/emergency-2@3x.png);
   background-size: cover;
   background-repeat: no-repeat;
