--- a/FrontEnd/Emergency2.css
+++ b/FrontEnd/Emergency2.css
@@ -294,12 +294,12 @@
   position: relative;
   border-radius: 32px;
   width: 100%;
-  height: 50.75rem;
-  overflow: hidden;
+  overflow: auto;
+  margin: 0;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  padding: 0 0 5.31rem;
+  padding: 0 0 5.6rem;
   gap: 0.75rem;
   background-image: url(./public/emergency-2@3x.png);
   background-size: cover;
