--- a/FrontEnd/Emergency1.css
+++ b/FrontEnd/Emergency1.css
@@ -293,6 +293,7 @@
   position: relative;
   border-radius: 32px;
   width: 100%;
+  min-height: 50.75rem;
   overflow: auto;
   margin: 0;
   flex-direction: column;
