--- a/FrontEnd/Emergency3.css
+++ b/FrontEnd/Emergency3.css
@@ -289,6 +289,7 @@
   position: relative;
   border-radius: 32px;
   width: 100%;
+  min-height: 50.75rem;
   overflow: auto;
   margin: 0;
   flex-direction: column;
