--- a/FrontEnd/ForgotPassword.css
+++ b/FrontEnd/ForgotPassword.css
@@ -316,8 +316,9 @@
   position: relative;
   border-radius: 32px;
   width: 100%;
-  height: 50.75rem;
-  overflow: hidden;
+  min-height: 50.75rem;
+  overflow: auto;
+  margin: 0;
   padding: 2.25rem 0;
   box-sizing: border-box;
   gap: 8.5rem;
