--- a/FrontEnd/ForgotPassword2.css
+++ b/FrontEnd/ForgotPassword2.css
@@ -343,13 +343,13 @@
   font-family: "Plus Jakarta Sans";
 }
 .forgot-password-2 {
-  position: relative;
   border-radius: 32px;
   width: 100%;
-  height: 50.75rem;
-  overflow: hidden;
+  min-height: 50.75rem;
+  overflow: auto;
+  margin: 0;
+  flex-direction: column;
   padding: 2.25rem 0;
-  box-sizing: border-box;
   align-items: center;
   gap: 6.94rem;
   background-image: url(./public/forgot-password2@3x.png);
