--- a/FrontEnd/Settings.css
+++ b/FrontEnd/Settings.css
@@ -121,8 +121,12 @@
   border: 0;
   padding: 0;
   background-color: transparent;
-  width: 20.44rem;
-  align-items: flex-start;
+  align-self: stretch;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
 }
 .change-pic-child,
 .male-user-icon1 {
@@ -438,7 +442,7 @@
 }
 .mainsettings,
 .settings {
-  overflow: hidden;
+  overflow: auto;
 }
 .mainsettings {
   align-self: stretch;
@@ -448,7 +452,7 @@
   flex-shrink: 0;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: 0.75rem 0.63rem 0;
+  padding: 0.75rem 0.63rem 0.75rem;
   box-sizing: border-box;
   gap: 0.63rem;
   text-align: left;
@@ -460,7 +464,10 @@
   position: relative;
   border-radius: 32px;
   width: 100%;
-  height: 50.75rem;
+  min-height: 50.75rem;
+  overflow: auto;
+  margin: 0;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
   background-image: url(./public/home2@3x.png);
