--- a/FrontEnd/SignUp.css
+++ b/FrontEnd/SignUp.css
@@ -413,10 +413,12 @@
   position: relative;
   border-radius: 32px;
   width: 100%;
-  height: 50.75rem;
-  overflow: hidden;
-  padding: 2.25rem 0;
-  box-sizing: border-box;
+  min-height: 50.75rem;
+  overflow: auto;
+  margin: 0;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   gap: 1.63rem;
   background-image: url(./public/forgot-password2@3x.png);
   background-size: cover;
