--- a/FrontEnd/index.css
+++ b/FrontEnd/index.css
@@ -436,8 +436,12 @@
   position: relative;
   border-radius: 32px;
   width: 100%;
-  height: 50.75rem;
-  overflow: hidden;
+  overflow: auto;
+  min-height: 50.75rem;
+  margin: 0;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   padding: 2.25rem 0;
   gap: 1.63rem;
   background-image: url(./public/forgot-password2@3x.png);
