--- a/FrontEnd/index.css
+++ b/FrontEnd/index.css
@@ -436,16 +436,17 @@
   position: relative;
   border-radius: 32px;
   width: 100%;
+  min-height: 100vh; /* Use 100vh to make it 100% of the viewport height */
   overflow: auto;
-  min-height: 50.75rem;
   margin: 0;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
   padding: 2.25rem 0;
   gap: 1.63rem;
+  background-color: #F0ECEC;
   background-image: url(./public/forgot-password2@3x.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: top;
+  background-position: bottom;
 }
