adjust page height to fit page

--- a/FrontEnd/ForgotPassword.css
+++ b/FrontEnd/ForgotPassword.css
@@ -316,14 +316,15 @@
   position: relative;
   border-radius: 32px;
   width: 100%;
-  min-height: 50.75rem;
+  min-height: 100dvh;
   overflow: auto;
   margin: 0;
   padding: 2.25rem 0;
   box-sizing: border-box;
   gap: 8.5rem;
+  background-color: #F0ECEC;
   background-image: url(./public/forgot-password@3x.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: top;
+  background-position: bottom;
 }
