--- a/FrontEnd/ForgotPassword2.css
+++ b/FrontEnd/ForgotPassword2.css
@@ -345,15 +345,16 @@
 .forgot-password-2 {
   border-radius: 32px;
   width: 100%;
-  min-height: 50.75rem;
+  min-height: 100dvh;
   overflow: auto;
   margin: 0;
   flex-direction: column;
   padding: 2.25rem 0;
   align-items: center;
   gap: 6.94rem;
+  background-color: #F0ECEC;
   background-image: url(./public/forgot-password2@3x.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: top;
+  background-position: bottom;
 }
