--- a/FrontEnd/Settings.css
+++ b/FrontEnd/Settings.css
@@ -446,14 +446,12 @@
 }
 .mainsettings {
   align-self: stretch;
+  flex: 1;	
   border-radius: 24px 24px 0 0;
   background-color: #fcf8f8;
-  height: 31.25rem;
-  flex-shrink: 0;
   align-items: flex-start;
   justify-content: flex-start;
   padding: 0.75rem 0.63rem 0.75rem;
-  box-sizing: border-box;
   gap: 0.63rem;
   text-align: left;
   font-size: 0.88rem;
@@ -464,12 +462,13 @@
   position: relative;
   border-radius: 32px;
   width: 100%;
-  min-height: 50.75rem;
+  min-height: 100dvh;
   overflow: auto;
   margin: 0;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  background-color: #F0ECEC;
   background-image: url(./public/home2@3x.png);
   background-size: cover;
   background-repeat: no-repeat;
