--- a/FrontEnd/AirQuality01.css
+++ b/FrontEnd/AirQuality01.css
@@ -352,7 +352,7 @@
   position: relative;
   border-radius: 32px;
   width: 100%;
-  min-height: 50.75rem;
+  min-height: 100dvh;
   overflow-y: auto;
   margin: 0;
   flex-direction: column;
@@ -360,6 +360,7 @@
   justify-content: flex-start;
   padding: 0 0 5.6rem;
   gap: 0.75rem;
+  background-color: #D3CECF;
   background-image: url(./public/air-quality-01@3x.png);
   background-size: cover;
   background-repeat: no-repeat;
