--- a/FrontEnd/AirQuality2.css
+++ b/FrontEnd/AirQuality2.css
@@ -859,7 +859,7 @@
     border-radius: 32px;
     background-color: #fcf8f8;
     width: 100%;
-    height: 50.75rem;
+    min-height: 100dvh;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -884,7 +884,7 @@
   border-radius: 32px;
   background-color: #fcf8f8;
   width: 100%;
-  height: 50.75rem;
+  min-height: 100dvh;
   overflow: hidden;
   display: flex;
   flex-direction: column;
