--- a/FrontEnd/AirQuality3.css
+++ b/FrontEnd/AirQuality3.css
@@ -412,7 +412,7 @@
   border-radius: 32px;
   background-color: #fcf8f8;
   width: 100%;
-  height: 50.75rem;
+  min-height: 100dvh;
   overflow: hidden;
   flex-direction: column;
 }
