--- a/FrontEnd/Emergency1.css
+++ b/FrontEnd/Emergency1.css
@@ -293,7 +293,7 @@
   position: relative;
   border-radius: 32px;
   width: 100%;
-  min-height: 50.75rem;
+  min-height: 100dvb;
   overflow: auto;
   margin: 0;
   flex-direction: column;
@@ -301,6 +301,7 @@
   justify-content: flex-start;
   padding: 0 0 5.6rem;
   gap: 0.75rem;
+  background-color: #FFE8C8;
   background-image: url(./public/emergency-2@3x.png);
   background-size: cover;
   background-repeat: no-repeat;
