--- a/FrontEnd/Emergency2.css
+++ b/FrontEnd/Emergency2.css
@@ -239,7 +239,7 @@
   font-family: "Plus Jakarta Sans";
 }
 .mainemergency2 {
-  padding: 0 1.88 5.6 rem;
+  padding: 1.88rem 1.88rem 5.6rem;
   z-index: 1;
 }
 .home-icon3 {
@@ -294,7 +294,7 @@
   position: relative;
   border-radius: 32px;
   width: 100%;
-  min-height: 50.75rem;
+  min-height: 100dvh;
   overflow: auto;
   margin: 0;
   flex-direction: column;
@@ -302,6 +302,7 @@
   justify-content: flex-start;
   padding: 0 0 5.6rem;
   gap: 0.75rem;
+  background-color: #FFE8C8;
   background-image: url(./public/emergency-2@3x.png);
   background-size: cover;
   background-repeat: no-repeat;
