--- a/FrontEnd/Emergency3.css
+++ b/FrontEnd/Emergency3.css
@@ -289,7 +289,7 @@
   position: relative;
   border-radius: 32px;
   width: 100%;
-  min-height: 50.75rem;
+  min-height: 100dvh;
   overflow: auto;
   margin: 0;
   flex-direction: column;
@@ -297,6 +297,7 @@
   justify-content: flex-start;
   padding: 0 0 5.6rem;
   gap: 0.75rem;
+  background-image: #FFE8C8;
   background-image: url(./public/emergency-2@3x.png);
   background-size: cover;
   background-repeat: no-repeat;
