--- a/FrontEnd/Loading.css
+++ b/FrontEnd/Loading.css
@@ -91,7 +91,7 @@
   position: relative;
   border-radius: 32px;
   width: 100%;
-  min-height: 50.75rem;
+  min-height: 100dvh;
   overflow: auto;
   margin: 0;
   flex-direction: column;
@@ -99,9 +99,10 @@
   justify-content: flex-start;
   padding: 0;
   gap: 0.75rem;
+  background-color: #fff;
   background-image: url(./public/loading@3x.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: top;
+  background-position: bottom;
   cursor: pointer;
 }
