--- a/AsthMapp/css/index.css
+++ b/AsthMapp/css/index.css
@@ -68,7 +68,7 @@
     position: relative;
     width: 13.06rem;
     height: 7.02rem;
-    object-fit: cover;
+    object-fit: contain;
 }
 .logintitle {
     margin: 0;
@@ -104,6 +104,7 @@
     align-items: center;
     justify-content: flex-end;
     gap: 1.5rem;
+    padding-top: 3rem;
 }
 .name6 {
     margin: 0;
@@ -310,6 +311,8 @@
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
+    border: 3px solid #b2e1e7;
+    border-radius: 16px;
 }
 .button-primary7:hover {
     border-radius: 16px;
@@ -339,114 +342,4 @@
     right: 0;
     bottom: 0;
     cursor: pointer;
-}
-.hyperlink1 {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-    position: relative;
-    width: 7.63rem;
-    height: 1.13rem;
-}
-.vector-icon13 {
-    position: relative;
-    max-height: 100%;
-    width: 9.25rem;
-    object-fit: cover;
-}
-.or1 {
-    position: relative;
-    letter-spacing: -0.01em;
-    font-weight: 600;
-}
-.vector-icon14 {
-    position: relative;
-    max-height: 100%;
-    width: 9.19rem;
-    object-fit: cover;
-}
-.or {
-    align-self: stretch;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-.text41 {
-    position: relative;
-    font-size: 0.88rem;
-    letter-spacing: -0.01em;
-    text-align: center;
-}
-.sign-up7,
-.span2,
-.text41 {
-    font-weight: 600;
-    font-family: "Plus Jakarta Sans";
-    color: #1e385f;
-}
-.sign-up7 {
-    text-decoration: underline;
-    font-weight: 800;
-    color: #b2e1e7;
-}
-.text43 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    font-size: 0.88rem;
-    letter-spacing: -0.01em;
-    text-align: center;
-}
-.text42 {
-    position: relative;
-    width: 3.75rem;
-    height: 1.13rem;
-    cursor: pointer;
-}
-.sign-up6 {
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: transparent;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: center;
-}
-.sign-in,
-.signinmain {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-}
-.signinmain {
-    align-self: stretch;
-    filter: drop-shadow(0 4px 10px rgba(0, 0, 0, 0.2));
-    padding: 0 1.5rem;
-    gap: 2rem;
-    text-align: left;
-    font-size: 0.75rem;
-    color: #1e385f;
-    font-family: "Plus Jakarta Sans";
-}
-.sign-in {
-    position: relative;
-    border-radius: 32px;
-    width: 100%;
-    min-height: 100dvh; /* Use 100vh to make it 100% of the viewport height */
-    overflow: auto;
-    margin: 0;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    padding: 2.25rem 0;
-    gap: 1.63rem;
-    background-color: #F0ECEC;
-    background-image: url(../assets/lightShapeBackgroundSimple.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: bottom;
 }
