--- a/AsthMapp/css/AirQuality01.css
+++ b/AsthMapp/css/AirQuality01.css
@@ -361,7 +361,7 @@
     padding: 0 0 5.6rem;
     gap: 0.75rem;
     background-color: #D3CECF;
-    background-image: url(./public/air-quality-01@3x.png);
+    background-image: url(../assets/air-quality-01@3x.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
